Issue #SB30103 User is not able to visible the text word of Mobile number and Email address clearly in the register page

--- a/themes/themes-portal.scss
+++ b/themes/themes-portal.scss
@@ -2743,6 +2743,9 @@ html[data-theme=Darkmode] {
 			}
 		}
 	}
+	.field>label, .inline.fields>label, .ui.modal .ui.radio.checkbox .box, .ui.radio.checkbox label{
+		color: var(--black);
+	}
 }
 
 html[data-theme='Darkmode'][layout='joy'] {
